# py-docs-handler

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
example/: buf.gen.yaml  descriptorset.pb  example.py  greet_connecpy.py  greet_pb2.py  greet_pb2.pyi
example/proto/: greet.proto
src/protodocs/: _asgi.py  _jsonschema.py  _proto_docstrings.py  _proto_specification.py  _specification.py  _typesignature.py
test/: armeria-spec.json  buf.gen.yaml  descriptorset.pb  test_kitchensink.py  testpb_connecpy.py  testpb_pb2.py  testpb_pb2.pyi
test/proto/: testpb.proto
